# Maze-Project

./: CMakeLists.txt  README.md  main.c  maze  maze.c  sdl.c
src/: map.c  wall.c
